discussion/kv_engine/137161/137161_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39292: set_collections persist current manifest

set_collections only allows 'forward' progress after checking
that the new manifest is a successor of the current manifest,
however after warm-up we have to accept whatever we are given.

This commit updates set_collections so that for persistent buckets
the new manifest is first stored in the database directory and
then we update from that manifest on-success, now warm-up brings
the manifest back from storage and we can validate that further
updates are a valid successor.

Ephemeral buckets just update with no background task.

This patch stores using Manifest::toJSON and reloads JSON using
Manifest's existing construction with no integrity checking.

Change-Id: Ie548e31f56c4847ecf4c0c4ad866544f6bcd2a5c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-10-02 08:42:03.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-02 09:18:29.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4845/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4845/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4845/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3372/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26642/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30821/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5218/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6259/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14033/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6369/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6139/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-10-02 14:24:42.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-10-02 14:24:59.000000000
Message: 
Patch Set 7: Verified+1

clang-tidy doesn't like tasks.def.h
----------------------------------------------------------------------------------------------------------------------
